# chess_programming

./: README.md
CCBridge3/: Readme-说明.htm
Wuttang/: console.cpp  console.h  data.cpp  data.h  hashKey.h  init.cpp  init.h  move.cpp  movegen.cpp  perft.cpp  perft.h  polybook.h  polykeys.h  pvTable.h  validate.cpp  validate.h  wuttang  xboard.cpp  xboard.h
didactic_engines/AikiChessBitboard/: AikiChess.c  AikiChessBitboard.txt  Attack.c  Bitboards.c  Data.c  Definitions.h  HashKeys.c  Init.c  InputOutput.c  LICENSE  Makemove.c  Misc.c  MoveGenerator.c  Perft.c  README.md  (+3 more)
drafts/: search.js  sf_eval.js
fen/: talkchess_hard_fen.txt
janggi/: winboard.txt
jiangi/: jiangi_res.txt  winboard_cecp.c
resources/: PeSTO_pst.txt  Piece value calculation v0.4.0.docx  TT_mate_scoring.txt  best_move_TT.txt  dynamic_hash_calculation.txt  interpolation.txt  interpolation_implementation_details.txt  movegen_optimizations_hgm.txt  nnue_andy_grant.txt  nnue_by_hgm.c  nps_calculation.txt  res_NN_misc.txt  rofchade_PST.txt  stats_analysis.txt  tactical_vs_positional.txt  tapered_evaluation.txt  texel's_tuning_by_Ronald  texel's_tuning_explained_by_Ronald  timing_by_pedro  tt_mar.txt
retro-chess/: dean-chess.bas  dieter-chess.bas
src/: README.MD
xiangqi/Chameleon-1.0/linux/: Makefile.am  autogen.sh  config.h.in  config.status  configure
xiangqi/Chameleon-1.0/linux/autom4te.cache/: output.0  traces.0
xiangqi_engines/Chameleon-1.0/linux/: Makefile  Makefile.in  chameleon  config.h  configure.ac
xiangqi_engines/Chameleon-1.0/linux/autom4te.cache/: requests  traces.1
(+861 files in other folders)
